--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com</groupId>
     <artifactId>LogWay</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>v1.0.0</version>
     <name>LogWay</name>
     <description>LogWay</description>
     <url/>
